Display the sleep time in the GitHub Actions logs

--- a/.github/workflows/check-issues.yaml
+++ b/.github/workflows/check-issues.yaml
@@ -47,7 +47,9 @@ jobs:
           python ./tweet.py "$title" "$url" || true
 
           # Sleep to avoid Twitter API rate limits
-          sleep $((RANDOM % 51 + 10))
+          sleep_time=$((RANDOM % 51 + 10))
+          echo "Sleeping for $sleep_time seconds..."
+          sleep $sleep_time
         done
       env:
         YOUR_CONSUMER_KEY: ${{ secrets.YOUR_CONSUMER_KEY }}
